--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "chart.js": "^4.4.7",
+    "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "idb": "^8.0.2",
     "jspdf": "^2.5.2",
